web/src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.underline {
    text-decoration-color: #60A5FA;
    text-decoration: underline;
}

.bg-blur-light {
  backdrop-filter: blur( 14.0px );
  -webkit-backdrop-filter: blur( 14.0px );
  border-bottom: 1px solid rgba(0, 0, 0, 0.18); 
  z-index: 999; 
}

.bg-image-1{
  position: relative;
  background-image: url(https://i.ytimg.com/vi/Govg_XmORLE/maxresdefault.jpg);
  background-size: cover;
}

.bg-image-2{
  position: relative;
  background-image: url(https://i.ytimg.com/vi/Govg_XmORLE/maxresdefault.jpg);
  background-size: cover;
}

@layer base {
      h1 {
        @apply text-4xl font-semibold text-black dark:text-white;
      }

      h2 {
        @apply text-2xl font-semibold mt-7 mb-1 text-black dark:text-white;
      }

      h3 {
        @apply text-2xl font-semibold mt-7 mb-1 text-black dark:text-white;
      }

      h4 {
        @apply text-base font-semibold mt-7 mb-1 text-black dark:text-white;
      }

      h5 {
        @apply text-base font-semibold mt-7 mb-1 text-black dark:text-white;
      }

      h6 {
        @apply text-base font-semibold mt-7 mb-1 text-black dark:text-white;
      }

      p {
        @apply text-base mb-4 text-black dark:text-white;
      }

      a{
        @apply underline;
      }

      figcaption{
        @apply  text-black dark:text-white text-base mt-2;
      }

    body {
      @apply min-h-screen m-0 w-full;
    }
    html {
      @apply min-h-screen m-0 w-full;
    }
  }

